scripts/setup/shell/k8s/k8s-ingress.yaml
# Forward all ingress requests to Istio ingress gateway
# because Microk8s does not support LoadBalancer.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingressgateway-ingress
  namespace: istio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        backend:
          serviceName: istio-ingressgateway
          servicePort: http2
